tests/ui/fail/log_control_flow.stderr
error[E0308]: mismatched types
 --> fail/log_control_flow.rs:5:28
  |
4 | fn main() {
  |           - expected `()` because of default return type
5 |     emit::info!("Text and {a: return 42}");
  |                            ^^^^^^^^^^^^ expected `()`, found integer

error: unreachable call
 --> fail/log_control_flow.rs:5:28
  |
5 |     emit::info!("Text and {a: return 42}");
  |                            ^^^^^^^^^^^^
  |                            |
  |                            unreachable call
  |                            any code following this expression is unreachable
  |
note: the lint level is defined here
 --> fail/log_control_flow.rs:2:9
  |
2 | #![deny(warnings)]
  |         ^^^^^^^^
  = note: `#[deny(unreachable_code)]` implied by `#[deny(warnings)]`
  = note: this error originates in the macro `emit::ct::__private_capture` (in Nightly builds, run with -Z macro-backtrace for more info)
